--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.3.0
-  flutter_svg: ^1.1.6
+  cloud_firestore: ^4.2.0
   smooth_page_indicator: ^1.0.0+2
   lottie: ^2.0.0
   google_fonts: ^3.0.1
+  firebase_auth: ^4.1.5
 
 dev_dependencies:
   flutter_test:
