--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   lottie: ^2.0.0
   google_fonts: ^3.0.1
   firebase_auth: ^4.1.5
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
