--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.3.0
-  cloud_firestore: ^4.2.0
+  firebase_core: ^2.13.1
+  cloud_firestore: ^4.8.0
   smooth_page_indicator: ^1.0.0+2
   lottie: ^2.0.0
-  google_fonts: ^3.0.1
-  firebase_auth: ^4.1.5
+  google_fonts: ^4.0.0
+  firebase_auth: ^4.6.2
   json_annotation: ^4.7.0
+  google_nav_bar: ^5.0.6
+  firebase_storage: ^11.2.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
